# baremetalrt

./: .gitattributes  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  VERSION  baremetalrt.spec  llama2_7b_chat_fp16.py  model.cache  models_api_response.json  netlify.toml  petals_infer_70b.py  pyproject.toml  test_dht_minimal.py  windows_patches.md  windows_patches_hivemind.md  windows_patches_petals.md
.github/: pull_request_template.md
api/: llama2_api.py  main.py  model_manager.py  model_status.json  openai_api.py
chat-ui/: .gitignore  netlify.toml  next.config.js  package-lock.json  package.json
cli/: bmrt.py
daemon/: baremetalrt.py  benchmark.py  build_engine.py  convert_tp.py  daemon.py  dashboard.html  model_registry.py
docs/: AGENT.md  API.md  ARCHITECTURE.md  MISSION.md  QUICKSTART.md  ROADMAP.md  SUPABASE_NOTE.md  build.md  convert.md  convert_trtllm.md  quickstart_windows.md  tensorrt-llm_install.md  windows_patches.md  windows_patches_petals.md  wsl_install.md
installer/: README.md  baremetalrt.iss  build-installer.ps1  generate-assets.py  install.ps1  signing-metadata.json  triton_kernels__init__.py
paper/: main.tex
scripts/: autodeploy.py  autodeploy_safe.py  build_trtllm_engine.py  check_cuda.py  convert_to_trtllm.py  deepseek_llm_7b_chat_4bit.py  download_and_build_engine.py  download_hf_model.py  download_llama3_13b_gptq.py  download_llama3_1_8b_hf.py  download_llama3_8b_hf.py  gptq_inference.py  llama2_13b_chat_4bit.py  llama2_7b_chat_8int.py  llama2_7b_chat_fp16.py  model.cache  (+14 more)
(+94 files in other folders)
